@@ -1,3 +1,7 @@
+Sat Dec 11 09:19:16 2004  Shugo Maeda  <shugo@modruby.net>
+
+	* request.c (request_all_params): new method. (closes #3)
+
 Sat Dec 11 08:38:51 2004  Shugo Maeda  <shugo@modruby.net>
 
 	* request.c (request_send_fd): check the type of self.
